[gd_scene load_steps=2 format=2]

[ext_resource path="res://components/wizard/wizard_steps/wizard_step_question.gd" type="Script" id=2]

[node name="WizardStep_StepQuestion" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextLabel" type="RichTextLabel" parent="VBox"]
self_modulate = Color( 0.537255, 0.819608, 0.945098, 1 )
margin_right = 1920.0
margin_bottom = 23.0
size_flags_horizontal = 3
theme_type_variation = "FontMedium"
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
text = "asdqsqdwasdqw"
fit_content_height = true
scroll_active = false

[node name="AnswerMargin" type="MarginContainer" parent="VBox"]
margin_top = 27.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30

[node name="Answers" type="GridContainer" parent="VBox/AnswerMargin"]
margin_left = 30.0
margin_top = 30.0
margin_right = 1890.0
margin_bottom = 1053.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/hseparation = 50

[node name="TextAppearTween" type="Tween" parent="."]

[connection signal="tween_all_completed" from="TextAppearTween" to="." method="_on_TextAppearTween_tween_all_completed"]
[connection signal="tween_completed" from="TextAppearTween" to="." method="_on_TextAppearTween_tween_completed"]
